--- a/vista/src/main/webapp/admin/index.xhtml
+++ b/vista/src/main/webapp/admin/index.xhtml
@@ -2,7 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+
 <h:head>
     <title>Administrador dashboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&amp;display=swap" rel="stylesheet"/>
@@ -137,6 +139,27 @@
         #mUnidadOk .dialog{width:360px;max-width:92vw;background:#22262c;color:#eef0f3;border-radius:12px;box-shadow:var(--shadow);padding:20px}
         #mUnidadOk .actions{display:flex;justify-content:center;margin-top:14px}
         #mUnidadOk .btn.gray{background:#3a3f47}
+
+        :root{--bg:#15181c;--shell:#101215;--text:#f5f6f7;--muted:#9aa0a6;--accent1:#e3a56b;--accent2:#b3823a;}
+        html,body{height:100%}
+        body{margin:0;background:var(--bg);color:var(--text);font-family:Poppins,Arial,sans-serif}
+        .wrap{padding:14px}
+        .shell{background:var(--shell);border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,.35);overflow:hidden}
+        .header{display:flex;align-items:center;justify-content:space-between;padding:16px 18px;background:linear-gradient(90deg,var(--accent1),var(--accent2))}
+        .header h1{font-size:18px;margin:0}
+        .content{padding:16px 18px}
+        .toolbar{display:flex;gap:10px;align-items:center;margin-bottom:12px}
+        .search{flex:1;border:none;border-radius:10px;background:#1f232a;color:#e8eaed;padding:10px 12px;outline:none}
+        .btn{border:none;border-radius:10px;padding:10px 14px;cursor:pointer;font-weight:600;background:#e3a56b}
+        table{width:100%;border-collapse:collapse;margin-top:8px}
+        th,td{padding:10px 12px;border-bottom:1px solid rgba(255,255,255,.08);text-align:left}
+        th{font-size:12px;letter-spacing:.6px;color:var(--muted);text-transform:uppercase}
+        .empty{padding:18px;border:1px dashed rgba(255,255,255,.15);border-radius:10px;color:var(--muted);margin-top:8px}
+        .msgs{margin-top:10px}
+
+        #sec-u-cons .input{padding-left:36px; position:relative; background:#3a404a;}
+        #sec-u-cons .input::placeholder{color:#9aa0a6;}
+
     </style>
 </h:head>
 <h:body>
@@ -354,7 +377,53 @@
                     <div class="card"><h3 class="title">Eliminar Unidad</h3><p style="color:#cfd4dc">Plantilla (pendiente de funcionalidad).</p></div>
                 </section>
                 <section id="sec-u-cons" class="hidden">
-                    <div class="card"><h3 class="title">Consultar Unidades</h3><p style="color:#cfd4dc">Plantilla (pendiente de funcionalidad).</p></div>
+                    <div class="form-wrapper">
+                        <div class="form-card" style="width:520px;max-width:94vw;background:#2a2e35;border:1px solid #3a3f48;border-radius:12px;padding:24px 26px;box-shadow:0 16px 40px rgba(0,0,0,.25)">
+                            <h2 style="margin:0 0 14px 0;font-weight:700">Consultar unidad</h2>
+
+                            <h:form id="frmConsUnidad">
+                                <div style="margin-bottom:12px">
+                                    <h:inputText id="filtro" value="#{unidadUI.filtro}" styleClass="input">
+                                        <f:passThroughAttribute name="placeholder" value="Buscar por nombre"/>
+                                        <f:passThroughAttribute name="autocomplete" value="off"/>
+                                    </h:inputText>
+                                </div>
+
+                                <h:messages id="msgsCons" globalOnly="true" styleClass="msgs" />
+
+                                <h:panelGroup id="tblCons" rendered="#{not empty unidadUI.unidades}">
+                                    <table>
+                                        <thead>
+                                        <tr>
+                                            <th>Nombre</th>
+                                            <th>Tipo</th>
+                                            <th>Horas</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <ui:repeat value="#{unidadUI.unidades}" var="u">
+                                            <tr>
+                                                <td>#{u.nombre}</td>
+                                                <td>#{u.tipo}</td>
+                                                <td>#{u.horas}</td>
+                                            </tr>
+                                        </ui:repeat>
+                                        </tbody>
+                                    </table>
+                                </h:panelGroup>
+
+                                <h:panelGroup rendered="#{empty unidadUI.unidades}" styleClass="empty">
+                                    No hay unidades registradas
+                                </h:panelGroup>
+
+                                <div class="center-actions" style="margin-top:16px">
+                                    <h:commandButton value="Buscar" action="#{unidadUI.buscar}" styleClass="btn-prim">
+                                        <f:ajax execute="@form" render="tblCons msgsCons"/>
+                                    </h:commandButton>
+                                </div>
+                            </h:form>
+                        </div>
+                    </div>
                 </section>
 
                 <section id="sec-asig-crear" class="hidden">
